<resources>
    <string name="app_name">NutriRate</string>


    <string name="nutrirate">NutriRate</string>
    <string name="judulbawah">Food Grading App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboardingTitle">Grading Makanan dengan Mudah</string>
    <string name="loremIpsum">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</string>
    <string name="textStart">Let\'s Start!</string>




    <string name="regis_kenalan">Kenalan Dulu, Yuk</string>
    <string name="regis_sudahakun"><u>Sudah punya akun</u></string>
    <string name="regis_kitakenalan">Kita kenalan sambil bikin akun dulu ya... Kalau kamu sudah punya akun, masuk disini</string>
    <string name="regis_hidupsehat">Hidup sehat, makanan sehat</string>
    <string name="regis_nama">Nama</string>
    <string name="regis_dipanggil">Kamu mau dipanggil siapa?</string>
    <string name="regis_email">Email</string>
    <string name="regis_contohemail">Masukin email kamu yuk! Contoh: abc@gmail.com</string>
    <string name="email_required">Email wajib diisi</string>
    <string name="regis_password">Password</string>
    <string name="regis_buatakun">Buat Akun</string>
    <string name="regis_bikinpassword">Bikin password nya juga ya!</string>

    <string name="login_password">Masukin password juga ya !</string>
    <string name="login_belumakun"><u>Belum punya akun</u></string>
    <string name="login_selamat">Selamat Datang !</string>
    <string name="login_selamatdatang">Selamat datang ya...Masukin akun kamu dulu yuk, belum punya akun? Buat disini</string>
    <string name="login_masukdisini">Masuk Disini Ya !</string>




    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="productNameLabel">Nama Produk :</string>
    <string name="masukkan_nama_produk">Masukkan nama produk</string>
    <string name="serving_size_label">Takaran Saji :</string>
    <string name="masukan_jumlah">Masukan Jumlah</string>
    <string name="gram_label">(g)</string>
    <string name="kkal_label">(kkal)</string>
    <string name="mg_label">(mg)</string>
    <string name="protein_label">Protein :</string>
    <string name="energi_label">Energi :</string>
    <string name="fat_label">Lemak :</string>
    <string name="saturated_fat_label">Lemak Jenuh :</string>
    <string name="sugar_label">Gula :</string>
    <string name="dietary_fiber_label">Serat :</string>
    <string name="salt_label">Sodium :</string>
    <string name="value_100">100</string>
    <string name="grading">Grading disini !</string>
    <string name="button_gallery_desc">Button Gallery</string>
    <string name="button_capture_desc">Button Capture</string>
    <string name="button_switch_desc">Button Switch Camera</string>


    <string name="navbar_home">home</string>
    <string name="navbar_history">history</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History\n</string>
    <string name="title_camera">Camera\n</string>
    <string name="what_is_nutrirate">What is NutriRate?</string>
    <string name="nutrirate_desc">NutriRate merupakan aplikasi yang terinspirasi dari NutriScore System dari Perancis, yang menilai produk makanan dan minuman berdasarkan kandungan gula, garam, dan lemak jenuh. Dengan pendekatan yang serupa, NutriRate bertujuan untuk memberikan penilaian terhadap makanan dan minuman kemasan di Indonesia dengan sistem penilaian dari A hingga E berdasarkan kandungan gizi. Aplikasi ini akan membantu masyarakat untuk memahami kualitas produk makanan dan minuman yang mereka konsumsi melalui informasi yang lebih transparan dan praktis.</string>
    <string name="hello">Hello Healthy People</string>
    <string name="slogan">Memindai, menilai, dan makan makanan sehat.</string>
    <string name="grade">A</string>
    <string name="is_the_grade_for_this_product">adalah nilai untuk produk ini</string>
    <string name="the_name_of_the_product">The Name of the Product</string>
    <string name="grade_desc">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</string>
    <string name="product_image">product image\n</string>
    <string name="profile_image">image profile</string>
    <string name="back_button">back button\n</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="lupa_password">lupa password?</string>


    <string name="invalid_email">Masukan email kamu dengan benar ya !</string>
    <string name="minimumcharacters">Kata sandi harus memiliki minimal 8 karakter ya !</string>


</resources>
